force-app/main/default/objects/Fund_Transfer_Request__c/Fund_Transfer_Request__c.object-meta.xml
<CustomObject>
    <label>Fund Transfer Request</label>
    <pluralLabel>Fund Transfer Requests</pluralLabel>
    <nameField>
        <type>AutoNumber</type>
        <label>Request Number</label>
        <displayFormat>FTR-{0000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>