force-app/main/default/objects/Fund_Transfer_Request__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <label>Case</label>
    <type>Lookup</type>
    <referenceTo>Case</referenceTo>
    <relationshipName>Fund_Transfer_Requests</relationshipName>
    <relationshipLabel>Fund Transfer Requests</relationshipLabel>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>