force-app/main/default/objects/Fund_Transfer_Request__c/fields/From_Account__c.field-meta.xml
<CustomField>
    <fullName>From_Account__c</fullName>
    <label>From Account</label>
    <type>Lookup</type>
    <referenceTo>FinancialAccount</referenceTo>
    <relationshipName>Source_Transfer_Requests</relationshipName>
    <relationshipLabel>Source Transfer Requests</relationshipLabel>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>