force-app/main/default/objects/Fund_Transfer_Request__c/fields/To_Account__c.field-meta.xml
<CustomField>
    <fullName>To_Account__c</fullName>
    <label>To Account</label>
    <type>Lookup</type>
    <referenceTo>FinancialAccount</referenceTo>
    <relationshipName>Destination_Transfer_Requests</relationshipName>
    <relationshipLabel>Destination Transfer Requests</relationshipLabel>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>