force-app/main/default/objects/Fund_Transfer_Request__c/fields/Transfer_Type__c.field-meta.xml
<CustomField>
    <fullName>Transfer_Type__c</fullName>
    <label>Transfer Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1:1</fullName>
            </value>
            <value>
                <fullName>1:N</fullName>
            </value>
            <value>
                <fullName>N:1</fullName>
            </value>
            <value>
                <fullName>N:N</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>